# Tstat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
executables/networking/: client_main.cpp  server_main.cpp
executables/tstat/: daemon_main.cpp  tstat_main.cpp
inc/: AbortCommand.hpp  Client.hpp  CommandLoader.hpp  IClient.hpp  IServer.hpp  Server.hpp  StartCommand.hpp  StopCommand.hpp  TimeCounter.hpp  TimeDaemon.hpp  config.hpp  utils.hpp
src/: AbortCommand.cpp  ArgParser.cpp  Client.cpp  CommandLoader.cpp  Server.cpp  StartCommand.cpp  StopCommand.cpp  TimeCounter.cpp  TimeDaemon.cpp  client_main.cpp  daemon_main.cpp  server_main.cpp  tstat_main.cpp  utils.cpp
src/networking/networking/: Client.hpp  IClient.hpp  IServer.hpp  Server.hpp  utils.hpp
src/networking/src/: Client.cpp  Server.cpp  utils.cpp
src/tstat/: CMakeLists.txt
src/tstat/src/: AbortCommand.cpp  ArgParser.cpp  CommandLoader.cpp  CountingState.cpp  IdleState.cpp  ListCommand.cpp  ShowCommand.cpp  StartCommand.cpp  StopCommand.cpp  StoppedState.cpp  TimeCounter.cpp  utils.cpp
src/tstat/tstat/: AbortCommand.hpp  ArgParser.hpp  CommandError.hpp  CommandLoader.hpp  CountingState.hpp  IState.hpp  IdleState.hpp  ListCommand.hpp  ShowCommand.hpp  StartCommand.hpp  StopCommand.hpp  StoppedState.hpp  TimeCounter.hpp  config.hpp  utils.hpp
test/: CMakeLists.txt  StartCommand-ut.cpp  TimeCounter-ut.cpp  utils-ut.cpp
